syntax = "proto3";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.ft.enums;

enum FiberState {
    //
    NotInTrace = 0x0;
    NotJoined = 0x1;
    //
    FiberState_Unknown = 0x2; // can't be just Unknown
    NotInZone = 0x3;
    //
    FiberState_Ok = 0x4; // can't be just Ok
    Suspicion = 0x5;
    Minor = 0x6;
    Major = 0x7;
    Critical = 0x8;
    User = 0x9;
    FiberBreak = 0xA;
    NoFiber = 0xB;
    //
    HighLighted = 0xE;
    DistanceMeasurement = 0xF;
    //
    Nothing = -1;
}

enum RtuMaker {
    Iit = 0;
    Veex = 1;
}

enum RtuPartState { 
    NotSetYet = 0;
    RtuPartState_Ok = 1; // can't be just Ok
	Broken = -1; 
}

enum MonitoringState {
    MonitoringState_Unknown = 0; // can't be just Unknown
    Off = 1;
    On = 2;
}

enum TceLinkState {
    NoLink = 0;
    SnmpTrapOff = 1;
    SnmpTrapOn = 2;
}

enum BaseRefType {
    None = 0;
    Precise = 1;
    Fast = 2;
    Additional = 3;
}

enum EventStatus {
    Unprocessed = 0;

    JustMeasurementNotAnEvent = -99; // only for trace statistics
    EventButNotAnAccident = -9;  // Ok or Suspicion (made by Fast)

    NotImportant = -3;
    Planned = -2;
    NotConfirmed = -1;
    Suspended = 1;
    Confirmed = 2;
}

enum ChannelEvent {
    ChannelEvent_Nothing = 0;
    ChannelEvent_Broken = -1;
    Repaired = 1;
}

enum MonitoringCurrentStep {
    Idle = 0;
    Toggle = 1;
    Measure = 2;
    FailedOtauProblem = 3;
    FailedOtdrProblem = 4;
    Interrupted = 5;
	Analysis = 6;
    MeasurementFinished = 7;
    Unknown = -1;
}

